--- a/src/tdc/VideoBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/tdc/VideoBundle/Resources/config/doctrine/Category.orm.yml
@@ -29,3 +29,7 @@ tdc\VideoBundle\Entity\Category:
         parent:
             targetEntity: Category
             inversedBy: children
+    manyToMany:
+        videos:
+            targetEntity: Video
+            mappedBy: categories
