--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+tdcWebServiceBundle:
+    resource: "@tdcWebServiceBundle/Resources/config/routing.yml"
+    prefix:   /ws
+
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
