--- a/src/tdc/VideoBundle/Resources/config/doctrine/Video.orm.yml
+++ b/src/tdc/VideoBundle/Resources/config/doctrine/Video.orm.yml
@@ -42,6 +42,15 @@ tdc\VideoBundle\Entity\Video:
     manyToMany:
         categories:
             targetEntity: Category
+            inversedBy: videos
+            joinTable:
+                name: video_category
+                joinColumns:
+                    video_id:
+                        referencedColumnName: id
+                inverseJoinColumns:
+                    category_id:
+                        referencedColumnName: id
     oneToMany:
         ratings:
             targetEntity: Rating
