Added the code for PlayerBundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+tdcPlayerBundle:
+    resource: "@tdcPlayerBundle/Resources/config/routing.yml"
+    prefix:   /
+
 tdcWebServiceBundle:
     resource: "@tdcWebServiceBundle/Resources/config/routing.yml"
     prefix:   /ws
