--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -47,6 +47,6 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/home, role: ROLE_USER }
+        - { path: ^/player, role: ROLE_USER }
         - { path: ^/home/*, role: ROLE_USER }
         - { path: ^/admin, role: ROLE_ADMIN }
-        #- { path: ^/admin/, role: ROLE_ADMIN }
