--- a/src/tdc/QABundle/Resources/config/doctrine/Question.orm.yml
+++ b/src/tdc/QABundle/Resources/config/doctrine/Question.orm.yml
@@ -12,6 +12,8 @@ tdc\QABundle\Entity\Question:
             type: datetime
         updated:
             type: datetime
+        views:
+            type: integer
     manyToOne:
         user:
             targetEntity: tdc\UserBundle\Entity\User
@@ -20,5 +22,15 @@ tdc\QABundle\Entity\Question:
         answers:
             targetEntity: Answer
             mappedBy: question
-
-
+    manyToMany:
+        tags:
+            targetEntity: QuestionTag
+            inversedBy: questions
+            joinTable:
+                name: question_tags
+                joinColumns:
+                    question_id:
+                        referencedColumnName: id
+                inverseJoinColumns:
+                    tag_id:
+                        referencedColumnName: id
