--- a/src/tdc/QABundle/Resources/config/routing.yml
+++ b/src/tdc/QABundle/Resources/config/routing.yml
@@ -1,3 +1,25 @@
 tdc_qa_homepage:
-    pattern:  /
-    defaults: { _controller: tdcQABundle:Default:index }
+    pattern:  /{start}/{max}
+    defaults:
+        _controller: tdcQABundle:Default:index
+        start: 1
+        max: 10
+    requirements:
+        start: \d+
+        max: \d+
+
+tdc_qa_view:
+    pattern: /question/{id}
+    defaults: { _controller: tdcQABundle:Default:view }
+
+tdc_qa_tagged:
+    pattern: /tagged/{tag}/{start}/{max}
+    defaults:
+        _controller: tdcQABundle:Default:tagged
+        tag: "all"
+        start: 1
+        max: 10
+    requirements:
+        tag: \w+
+        start: \d+
+        max: \d+
