--- a/src/tdc/UserBundle/Resources/config/services.yml
+++ b/src/tdc/UserBundle/Resources/config/services.yml
@@ -2,6 +2,18 @@ parameters:
 #    tdc_user.example.class: tdc\UserBundle\Example
 
 services:
+    tdc_user.registration.form.type:
+        class: tdc\UserBundle\Form\Type\RegistrationFormType
+        arguments: [%fos_user.model.user.form_data_class%]
+        tags:
+            - { name: form.type, alias: tdc_user_registration }
+
+    tdc_user.profile.form.type:
+        class: tdc\UserBundle\Form\Type\ProfileFormType
+        arguments: [%fos_user.model.user.form_data_class%]
+        tags:
+            - { name: form.type, alias: tdc_user_profile }
+
 #    tdc_user.example:
 #        class: %tdc_user.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
