got instant payment notifications to work. Still must polish and test

--- a/src/tdc/UserBundle/Resources/config/doctrine/Subscription.orm.yml
+++ b/src/tdc/UserBundle/Resources/config/doctrine/Subscription.orm.yml
@@ -13,6 +13,7 @@ tdc\UserBundle\Entity\Subscription:
         transaction:
             type: string
             length: 255
+            unique: true
         duration:
             type: string
             length: 100
