refined subscription and started to work on daily maintenance cmd

--- a/src/tdc/UserBundle/Resources/config/doctrine/Subscription.orm.yml
+++ b/src/tdc/UserBundle/Resources/config/doctrine/Subscription.orm.yml
@@ -17,6 +17,9 @@ tdc\UserBundle\Entity\Subscription:
         duration:
             type: string
             length: 100
+        status:
+            type: string
+            length: 100
     oneToOne:
         user_subscription:
             targetEntity: User
