--- a/src/tdc/UserBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/tdc/UserBundle/Resources/config/doctrine/User.orm.yml
@@ -14,6 +14,9 @@ tdc\UserBundle\Entity\User:
             type: string
             length: 255
             nullable: true
+        joined:    
+            type: date
+            nullable: true
     oneToMany:
         ratings:
             targetEntity: \tdc\VideoBundle\Entity\Rating
