Removed the ROLE_SUBSCRIBED as we now handle access to the player ourselves. Updated Subscription to inlude TdcStatus Removed a bunch of unessesary code from the subscribe page.

--- a/src/tdc/UserBundle/Resources/config/doctrine/Subscription.orm.yml
+++ b/src/tdc/UserBundle/Resources/config/doctrine/Subscription.orm.yml
@@ -20,6 +20,8 @@ tdc\UserBundle\Entity\Subscription:
         status:
             type: string
             length: 100
+        tdcStatus:
+            type: smallint
     oneToOne:
         user_subscription:
             targetEntity: User
