--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,6 @@ security:
         Symfony\Component\Security\Core\User\User: plaintext
 
     role_hierarchy:
-        ROLE_SUBSCRIBER:  ROLE_USER
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
@@ -33,6 +32,6 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/qa/ask, role: ROLE_USER }
         - { path: ^/profile, role: ROLE_USER }
-        - { path: ^/player, role: ROLE_SUBSCRIBER }
+        - { path: ^/player, role: ROLE_USER }
         - { path: ^/profile/*, role: ROLE_USER }
         - { path: ^/admin, role: ROLE_ADMIN }
