--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -47,6 +47,11 @@ doctrine:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
 
+# Services
+services:
+    tdcThemeSelector:
+        class: tdc\ThemeBundle\Selector
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: %mailer_transport%
