Began implementation of a very simple template selecting scheme.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -47,10 +47,16 @@ doctrine:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
 
+# Parameters
+parameters:
+    tdc.liveTheme: Default
+
 # Services
-services:
-    tdcThemeSelector:
-        class: tdc\ThemeBundle\Selector
+#services:
+#    tdcThemeSelector:
+#        class: tdc\ThemeBundle\Selector
+#        arguments:  [%tdc.liveTheme%]
+
 
 # Swiftmailer Configuration
 swiftmailer:
