tdc1 template almost ready

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -55,9 +55,8 @@ parameters:
 
 # Services
 #services:
-#    tdcThemeSelector:
-#        class: tdc\ThemeBundle\Selector
-#        arguments:  [%tdc.liveTheme%]
+#    tdc.qaservice:
+#        class: tdc\QABundle\QAService
 
 
 # Swiftmailer Configuration
