working on random tag selection

--- a/app/config/parameters_dev.ini
+++ b/app/config/parameters_dev.ini
@@ -1,9 +1,9 @@
 [parameters]
     database_driver="pdo_mysql"
-    database_host="sg111.servergrove.com"
+    database_host="localhost"
     database_port=""
-    database_name="tdchanne_symf2"
-    database_user="tdcha_rudy"
+    database_name="tdchannel"
+    database_user="rudy"
     database_password="M@nhunt9!"
     mailer_transport="smtp"
     mailer_host="mail.rudycortes.com"
